objects/RD_CS__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Keeps resource directory options</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity_Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <description>ODN - Office Depot North, ODS - Office Depot South, ISO - Inside Sales</description>
        <label>Entity</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Resource Directory</label>
</CustomObject>